User panel txt revamp to prevent blurring

--- a/Web/public/css/colortest.css
+++ b/Web/public/css/colortest.css
@@ -20,17 +20,8 @@ html, body {
 }
 
 .content-center {
-    padding-bottom:100px; /* Height of the footer element */
     box-shadow:-1px 1px 1px rgba(0, 0, 0, 0.46);
 
-}
-#footer {
-    background-color: orange;
-    width:100%;
-    height:100px;
-    position:absolute;
-    bottom:0;
-    left:0;
 }
 
 
@@ -76,7 +67,19 @@ body {
 
 }
 
+/**  ********   **
+ ** USER PANEL  **
+/**  ********   **/
 
+.col-lg-offset-2 {
+    color: #122b40;
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.00);
+    font-size: 13px;
+}
+#userpanel1 h2{
+    color: #122b40;
+
+}
 
 /** ******* **/
 /* Dash Menu */
